# elements_of_compute_systems

./: README.md  gates.py  pyproject.toml
tests/: test_gates.py
