[tool.poetry]
name = "elements-of-compute-systems"
version = "0.1.0"
description = ""
authors = ["Mark de Wijk <dewijkmark@gmail.com>"]
readme = "README.md"
packages = [{include = "elements_of_compute_systems"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
